# CosmoTech-Acceleration-Library

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  BLACK_SETUP.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  find_untested_functions.py  generate_test_files.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.all.txt  requirements.dev.txt  requirements.doc.txt  requirements.extra.txt  requirements.past.txt  requirements.test.txt  requirements.txt  setup.py  sonar-project.properties  versions.json
.github/workflows/: check_untested_functions.yml  codeql-analysis.yml  generate_gh_page.yml  lint.yml  linter.yml  publish-to-pypi.yml  retro_copat_test.yml  tag_latest_release_gh_page.yml  test.yml  track_dependencies.yml
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/csm-data/: index.html
0.10.0/dependencies/: index.html
0.10.0/search/: search_index.json
0.10.0/tutorials/: index.html
0.10.1/: 404.html  index.html  sitemap.xml
0.10.1/csm-data/: index.html
0.10.1/dependencies/: index.html
0.10.1/search/: search_index.json
0.10.1/tutorials/: index.html
0.10.2/: 404.html  index.html  sitemap.xml
0.10.2/csm-data/: index.html
0.10.2/dependencies/: index.html
0.10.2/scripts/: index.md.template
0.10.2/search/: search_index.json
0.2.10/: index.html  objects.inv
0.2.11/: 404.html  index.html
0.2.12/: 404.html  index.html
0.2.13/: index.html  objects.inv
0.2.14/: index.html
0.2.15/: 404.html  index.html
0.2.16/: 404.html  index.html
0.2.17/: 404.html  index.html
0.2.18/: 404.html  index.html  objects.inv
0.2.2/: 404.html  index.html
0.2.3/: 404.html  index.html  objects.inv
0.2.4/: index.html
0.2.5/: 404.html  index.html
0.2.6/: index.html  objects.inv
0.2.7/: 404.html  index.html
0.2.8/: index.html  sitemap.xml
0.2.9/: 404.html  index.html
0.3.0/: 404.html  index.html  objects.inv
0.3.1/: index.html  objects.inv
0.4.0/: 404.html  index.html  objects.inv
0.4.1/: 404.html  index.html
0.4.2/: 404.html  index.html
0.4.3/: index.html
0.4.4/: index.html  objects.inv
0.4.5/: index.html
0.4.6/: 404.html  index.html
0.4.7/: index.html
0.5.0/: 404.html  index.html  objects.inv
0.5.1/: 404.html  index.html
0.5.2/: index.html
0.5.3/: index.html
0.5.4/: 404.html  index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.6.2/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.8.0/: 404.html  index.html  sitemap.xml
0.8.1/: 404.html  index.html  sitemap.xml
0.8.2/: 404.html  index.html  sitemap.xml
0.8.3/: 404.html  index.html  sitemap.xml
0.8.4/: 404.html  index.html  sitemap.xml
0.8.5/: 404.html  index.html  sitemap.xml
0.8.6/: 404.html  index.html  objects.inv  sitemap.xml
0.8.7/: 404.html  index.html  sitemap.xml
0.8.8/: 404.html  index.html  sitemap.xml
0.9.0/: 404.html  index.html  sitemap.xml
0.9.1/: 404.html  index.html  sitemap.xml
0.9.2/: 404.html  index.html  sitemap.xml
0.9.3/: 404.html  index.html  sitemap.xml
0.9.4/: 404.html  index.html  sitemap.xml
0.9.4.1/: 404.html  index.html  sitemap.xml
0.9.5/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0rc0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0-rc1/: 404.html  index.html  sitemap.xml
2.2.0/: 404.html  index.html  sitemap.xml
2.2.1/: 404.html  index.html  sitemap.xml
2.3.0/: 404.html  index.html  sitemap.xml
CosmoTech_Acceleration_Library/: __init__.py
dependencies/: index.html
docs/: .nav.yml  accelerators.adx_wrapper.md  accelerators.cosmo_api.md  accelerators.csm_engine.md  accelerators.scenario_download.md  modelops.core.common.graph_handler.md  modelops.core.common.redis_handler.md  modelops.core.decorators.md  modelops.core.io.model_exporter.md  modelops.core.io.model_importer.md  modelops.core.io.model_metadata.md  modelops.core.io.model_reader.md  modelops.core.io.model_writer.md  modelops.core.utils.model_util.md  pull_request.md
latest/: 404.html  index.html  sitemap.xml
scripts/: generate_index.py  generate_references.py
search/: search_index.json
tests/: docker-compose.yml
(+2520 files in other folders)
