[metadata]
licence_files = ["LICENSE"]

[project]
name = "cosmotech_acceleration_library"
authors = [{ name = "Cosmo Tech", email = "platform@cosmotech.com" }]
description = "Acceleration libraries for CosmoTech cloud based solution development"
urls.Homepage = "https://www.cosmotech.com"
urls.Source = "https://github.com/Cosmo-Tech/CosmoTech-Acceleration-Library"
urls.Documentation = "https://cosmo-tech.github.io/CosmoTech-Acceleration-Library"
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = { file = "README.md", content-type = "text/markdown" }


[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov-report term-missing:skip-covered --cov=cosmotech.coal"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | generated
  | __pycache__
)/
'''

[tool.setuptools]
include-package-data = true
package-data."*" = [
    "requirements.txt",
    "requirements.doc.txt",
    "requirements.test.txt",
    "requirements.extra.txt"
]
zip-safe = false

[project.scripts]
csm-data = "cosmotech.csm_data.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmotech.*"]

[tool.setuptools.dynamic]
version.attr = "cosmotech.coal.__version__"
dependencies.file = "requirements.txt"
optional-dependencies.doc.file = "requirements.doc.txt"
optional-dependencies.test.file = "requirements.test.txt"
optional-dependencies.extra.file = "requirements.extra.txt"
optional-dependencies.dev.file = "requirements.dev.txt"
optional-dependencies.all.file = "requirements.all.txt"
